# smartmontool

./: CMakeLists.txt  config.h  knowndrives.cpp  knowndrives.h  os_linux.cpp  os_win32.cpp  smartctl.cpp  smartmontools-6.5.vcxproj  smartmontools-6.5.vcxproj.filters  svnversion.h
getopt/: getopt.c
os_win32/: config.h
unix/: config.h
